修改错别字

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>能力中心</title>
-		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
-		<meta name="author" content="htmlcoder.me">
+		<meta name="description" content="chinasoft hsbc line capability center">
+		<meta name="author" content="capability center">
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -102,7 +102,7 @@
 												<li class="active"><a href="index.html">主页</a></li>
 												<li><a href="activity.html" >最新活动</a></li>
 
-												<li><a href="service.html">服务</a></li>
+												<li><a href="service1.html">服务</a></li>
 												<!-- <li><a href="#portfolio">Portfolio</a></li> -->
 												
 <li><a href="../SpiderNetDev/service/manage/loginPage.html">SpiderNet</a></li>
