--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -95,7 +95,7 @@
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
 												<li><a href="index.html">主页</a></li>
-												<li><a href="#">|</a></li>
+												<li><a>|</a></li>
 												<li class="active"><a href="#a1">业务渠道</a></li>
 												<li><a href="#a2">技术架构渠道</a></li>
 												<li><a href="#a3">技术渠道</a></li>
@@ -165,22 +165,22 @@
 												<p><table class="table table-condensed">
 												<tbody>
 												<tr>
-													<td><a href="#"><span>账户</span></a></td>
-													<td><a href="#"><span>转账</span></a></td>
-													<td><a href="#"><span>支付</span></a></td>
-													<td><a href="#"><span>存款</span></a></td>
+													<td><a><span>账户</span></a></td>
+													<td><a><span>转账</span></a></td>
+													<td><a><span>支付</span></a></td>
+													<td><a><span>存款</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="#"><span>贷款</span></a></td>
-													<td><a href="#"><span>外汇</span></a></td>
-													<td><a href="#"><span>保险</span></a></td>
-													<td><a href="#"><span>房贷</span></a></td>
+													<td><a><span>贷款</span></a></td>
+													<td><a><span>外汇</span></a></td>
+													<td><a><span>保险</span></a></td>
+													<td><a href="http://117.78.38.89/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5"><span>房贷</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="#"><span>基金</span></a></td>
-													<td><a href="#"><span>股票</span></a></td>
-													<td><a href="#"><span>理财</span></a></td>
-													<td><a href="#"><span>信用卡</span></a></td>
+													<td><a><span>基金</span></a></td>
+													<td><a><span>股票</span></a></td>
+													<td><a><span>理财</span></a></td>
+													<td><a><span>信用卡</span></a></td>
 												</tr>
 												</tbody>
 											</table></p>
@@ -196,21 +196,21 @@
 												<p><table class="table table-condensed">
 												<tbody>
 												<tr>
-													<td><a href="#"><span>账户</span></a></td>
-													<td><a href="#"><span>现金管理</span></a></td>
-													<td><a href="#"><span>交易</span></a></td>
+													<td><a><span>账户</span></a></td>
+													<td><a><span>现金管理</span></a></td>
+													<td><a><span>交易</span></a></td>
 
 												</tr>
 												<tr>
-													<td><a href="#"><span>信贷</span></a></td>
-													<td><a href="#"><span>外汇</span></a></td>
-													<td><a href="#"><span>授权</span></a></td>
+													<td><a><span>信贷</span></a></td>
+													<td><a><span>外汇</span></a></td>
+													<td><a><span>授权</span></a></td>
 
 												</tr>
 												<tr>
-													<td><a href="#"><span>审计</span></a></td>
-													<td><a href="#"><span>监控</span></a></td>
-													<td><a href="#"><span></span></a></td>
+													<td><a><span>审计</span></a></td>
+													<td><a><span>监控</span></a></td>
+													<td><a><span></span></a></td>
 												</tr>
 
 												</tbody>
@@ -227,15 +227,15 @@
 												<p><table class="table table-condensed">
 												<tbody>
 												<tr>
-													<td><a href="#"><span>eFOS</span></a></td>
-													<td><a href="#"><span>eTOM</span></a></td>
-													<td><a href="#"><span>eCRM</span></a></td>
+													<td><a><span>eFOS</span></a></td>
+													<td><a><span>eTOM</span></a></td>
+													<td><a><span>eCRM</span></a></td>
 
 												</tr>
 												<tr>
-													<td><a href="#"><span>eCRD</span></a></td>
-													<td><a href="#"><span>ePSV</span></a></td>
-													<td><a href="#"><span>ePV</span></a></td>
+													<td><a><span>eCRD</span></a></td>
+													<td><a><span>ePSV</span></a></td>
+													<td><a><span>ePV</span></a></td>
 
 
 												</tr>
@@ -254,10 +254,10 @@
 												<p><table class="table table-condensed">
 												<tbody>
 												<tr>
-													<td><a href="#"><span>证券基金投资</span></a></td>
+													<td><a><span>证券基金投资</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="#"><span>外汇投资</span></a></td>
+													<td><a><span>外汇投资</span></a></td>
 												</tr>
 
 												</tbody>
@@ -287,15 +287,15 @@
 												<p><table class="table table-condensed">
 												<tbody>
 												<tr>
-													<td><a href="#"><span>网银</span></a></td>
-													<td><a href="#"><span>Tablet</span></a></td>
-													<td><a href="#"><span>微信银行</span></a></td>
+													<td><a><span>网银</span></a></td>
+													<td><a><span>Tablet</span></a></td>
+													<td><a><span>微信银行</span></a></td>
 
 												</tr>
 												<tr>
-													<td><a href="#"><span>ATM</span></a></td>
-													<td><a href="#"><span>VTM</span></a></td>
-													<td><a href="#"><span></span></a></td>
+													<td><a><span>ATM</span></a></td>
+													<td><a><span>VTM</span></a></td>
+													<td><a><span></span></a></td>
 
 												</tr>
 
@@ -313,15 +313,15 @@
 												<p><table class="table table-condensed">
 												<tbody>
 												<tr>
-													<td><a href="#"><span>GDI</span></a></td>
-													<td><a href="#"><span>SMP</span></a></td>
-													<td><a href="#"><span>BPM</span></a></td>
+													<td><a><span>GDI</span></a></td>
+													<td><a><span>SMP</span></a></td>
+													<td><a><span>BPM</span></a></td>
 
 												</tr>
 												<tr>
-													<td><a href="#"><span>EAI</span></a></td>
-													<td><a href="#"><span>RMP</span></a></td>
-													<td><a href="#"><span></span></a></td>
+													<td><a><span>EAI</span></a></td>
+													<td><a><span>RMP</span></a></td>
+													<td><a><span></span></a></td>
 
 												</tr>
 												</tbody>
@@ -337,10 +337,10 @@
 												<p><table class="table table-condensed">
 												<tbody>
 												<tr>
-													<td><a href="#"><span>HCC</span></a></td>
-													<td><a href="#"><span>INS</span></a></td>
-													<td><a href="#"><span>HUB</span></a></td>
-													<td><a href="#"><span>OBS</span></a></td>
+													<td><a><span>HCC</span></a></td>
+													<td><a><span>INS</span></a></td>
+													<td><a><span>HUB</span></a></td>
+													<td><a><span>OBS</span></a></td>
 												</tr>
 												</tbody>
 											</table></p>
@@ -358,13 +358,13 @@
 												<p><table class="table table-condensed">
 												<tbody>
 												<tr>
-													<td><a href="#"><span>个人客户数据仓库</span></a></td>
+													<td><a><span>个人客户数据仓库</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="#"><span>公司客户数据仓库</span></a></td>
+													<td><a><span>公司客户数据仓库</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="#"><span>信用卡数据仓库</span></a></td>
+													<td><a><span>信用卡数据仓库</span></a></td>
 												</tr>
 
 												</tbody>
@@ -396,46 +396,46 @@
 												<div class="panel-body">
 													<div class="row">
 														<div class="col-md-2">
-															<a href="/" target="_blank"><img src="images\11.png" width="170" height="70" border="边框"></a>
+															<a target= "_blank"><img src="images\11.png" width="170" height="70" border="边框"></a>
 														</div>
 														<div class="col-md-2">
-															<a href="/" target="_blank"><img src="images\12.png" width="170" height="70" border="边框"></a>
+															<a target="_blank"><img src="images\12.png" width="170" height="70" border="边框"></a>
 														</div>
 														<div class="col-md-2">
-															<a href="/" target="_blank"><img src="images\13.png" width="170" height="70" border="边框"></a>
+															<a target="_blank"><img src="images\13.png" width="170" height="70" border="边框"></a>
 
 														</div>
 
 														<div class="col-md-2">
-															<a href="/" target="_blank"><img src="images\14.png" width="170" height="70" border="边框"></a>
-
-
-														</div>
-														<div class="col-md-2">
-
-															<a href="/" target="_blank"><img src="images\15.png" width="170" height="70" border="边框"></a>
+															<a target="_blank"><img src="images\14.png" width="170" height="70" border="边框"></a>
 
 
 														</div>
 														<div class="col-md-2">
-															<a href="/" target="_blank"><img src="images\16.png" width="170" height="70" border="边框"></a>
+
+															<a target="_blank"><img src="images\15.png" width="170" height="70" border="边框"></a>
+
+
+														</div>
+														<div class="col-md-2">
+															<a target="_blank"><img src="images\16.png" width="170" height="70" border="边框"></a>
 
 														</div>
 														<div class="col-md-2">
 
-															<a href="/" target="_blank"><img src="images\17.png" width="170" height="70" border="边框"></a>
+															<a target="_blank"><img src="images\17.png" width="170" height="70" border="边框"></a>
 
 														</div>
 														<div class="col-md-2">
-															<a href="/" target="_blank"><img src="images\18.png" width="170" height="70" border="边框"></a>
+															<a target="_blank"><img src="images\18.png" width="170" height="70" border="边框"></a>
 
 														</div>
 														<div class="col-md-2">
-															<a href="/" target="_blank"><img src="images\19.png" width="170" height="70" border="边框"></a>
+															<a target="_blank"><img src="images\19.png" width="170" height="70" border="边框"></a>
 
 														</div>
 														<div class="col-md-2">
-															<a href="/" target="_blank"><img src="images\110.png" width="170" height="70" border="边框"></a>
+															<a target="_blank"><img src="images\110.png" width="170" height="70" border="边框"></a>
 
 														</div>
 
