--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -97,7 +97,6 @@
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
 												<li><a href="index.html">主页</a></li>
-												<li><a href="service.html">培训</a></li>
 												<li><a href="">|</a></li>
 												<li class="active"><a href="service1.html">技术</a></li>
 												<li><a href="service2.html">业务</a></li>
@@ -799,7 +798,7 @@
 					</div>
 			    </div>
 		</div>
-
+		</div>
 		<!-- JavaScript files placed at the end of the document so the pages load faster
 		================================================== -->
 		<!-- Jquery and Bootstap core js files -->
