--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -94,7 +94,7 @@
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
 												<li><a href="index.html">主页</a></li>
-
+												<li><a href="service.html">培训</a></li>
 												<li><a href="">|</a></li>
 												<li><a href="service1.html">技术</a></li>
 												<li><a href="service2.html">业务</a></li>
@@ -132,7 +132,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<h1 class="text-center"><span>能力中心</span>售前</h1>
-							<p class="lead">建立起组织自己的培训能力，拉通各个交付部的培训资源，以达到共享资源，交流沟通的目的。</p>
+							<p class="lead">分析，抽象，梳理和沉淀现有的组织技术交付能力、组织管理能力、敏捷工程能力、技术架构能力以及构建新的能力，并使其结构化和标准化，逐渐构建成熟的售前能力。</p>
 						</div>
 					</div>
 				</div>
@@ -151,13 +151,13 @@
 												<h4 class="modal-title" id="project-1-label">西安ODC方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>ChinaSoft Overview</p>
 														<p>Current presence in HSBC</p>
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/西安ODC方案1.jpg" alt="">
 													</div>
 												</div>
@@ -176,13 +176,13 @@
 												<h4 class="modal-title" id="project-2-label">HSBC业务线服务目录总览</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>overview去介绍HSBC业务线所覆盖的银行业务</p>
 														<p></p>
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC业务线服务目录总览2.jpg" alt="">
 													</div>
 												</div>
@@ -198,19 +198,19 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-3-label">HSBC业务线服务目录总览</h4>
+												<h4 class="modal-title" id="project-3-label">HSBC业务线敏捷开发能力</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>介绍HSBC业务线的敏捷工程能力</p>
 														<p>敏捷流程标准化</p>
 														<p>	Devops 持续交付</p>
 														<p>	已经逐渐从T&M的交付形式转向由中软Leader带领团队的Team Delivery交付形式。</p>
 														<p>	交付模式创新,2015年11月，通过对项目的敏捷交付能力的认证，以过去年两中我们在数据为基础。我们和汇丰在一些成熟度较高的项目上签署了故事点交付的新交付合同。在我们和汇丰的合作形式上又向前迈出了重要的一步。</p>
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC业务线敏捷开发能力2.jpg" alt="">
 													</div>
 												</div>
@@ -229,9 +229,9 @@
 												<h4 class="modal-title" id="project-4-label">HSBC业务线能力中心建设方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>战略解码-以公司战略为基础,作正确的事情</p>
 														<p>统一核心价值观-力出一孔-改变员工的能力与生活</p>
 														<p>愿景解读-我们清楚的知道如何实现目标</p>
@@ -242,7 +242,7 @@
 														<p>技能鉴定体系-个性定制学习训练实战</p>	
 														<p>技能鉴定体系-个性定制学习训练实战</p>	
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC业务线能力中心建设方案3.jpg" alt="">
 													</div>
 												</div>
@@ -261,15 +261,15 @@
 												<h4 class="modal-title" id="project-5-label">HSBC业务线云能力解决方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>Precision Marketing Solution</p>
 														<p>Credit Limit Platform solution</p>
 														<p>Integrated risk monitoring solution</p>
 														<p>Operational monitoring & Control System </p>	
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC业务线云能力解决方案2.jpg" alt="">
 													</div>
 												</div>
@@ -288,16 +288,16 @@
 												<h4 class="modal-title" id="project-6-label">HSBC业务线数据迁移能力解决方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>1.数据迁移痛点及方法论</p>
 														<p>2.数据迁移整体技术架构</p>
 														<p>3.数据治理体系及平台架构</p>
 														<p>4. 基于CDC产品的数据迁移及案例</p>		
 														<p>5. 我们的能力 </p>														
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC业务线数据迁移能力解决方案2.jpg" alt="">
 													</div>
 												</div>
@@ -316,15 +316,15 @@
 												<h4 class="modal-title" id="project-7-label">HSBC业务线英语培训能力解决方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>1.Start the Journey: guage level(English)assessment</p>
 														<p>2.Continue the journey: Candidates take training.</p>
 														<p>3.Keep on going:Candidates continue to adding value. </p>
 														<p>4.Find yourself: As internationalization grows, candidates will get the corresponding promotion once they matched JD in occupation path.</p>	
 													</div>
-													<div class="col-md-6">s
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC业务线英语培训能力解决方案2.jpg" alt="">
 													</div>
 												</div>
@@ -340,12 +340,12 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-8-label">Project Title</h4>
+												<h4 class="modal-title" id="project-8-label">HSBC业务线元数据治理能力解决方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>实现统一数据共享、提升数据质量、强化决策支持等数据管理目标，提升将数据转换成信息、到知识、再到智慧的过程管理水平和效率。</p>
 														<p>实施后具备的数据治理能力有：</p>
 														<p>1）BI上下游数据结构比对差异分析能力</p>
@@ -357,7 +357,7 @@
 														<p>7）基于故障原因分析的数据治理能力</p>
 														<p>8）更多能力……</p>		
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC业务线元数据&数据质量治理能力解决方案1.jpg" alt="">
 													</div>
 												</div>
@@ -376,16 +376,17 @@
 												<h4 class="modal-title" id="project-9-label">PCF解决方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>1. Resource Optimizing</p>
 														<p>2. More Reliable</p>
 														<p>3. Scalable Architecture</p>
 														<p>4. Fast Deployment</p>
 						              	<p>5. Centralized Management</p>
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+
 														<img src="./images/PCF解决方案2.jpg" alt="">
 													</div>
 												</div>
@@ -404,9 +405,9 @@
 												<h4 class="modal-title" id="project-10-label">HSBC设备云测解决方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>Single fighting with devices mass</p>
 														<p>Agile or DevOps will be out of order in development</p>
 														<p>Cannot touch the button</p>
@@ -414,7 +415,7 @@
 														<p>Have no device to debug  the crash-down</p>
 														<p>Various devices  models will be provided all the time</p>
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC设备云测解决方案2.jpg" alt="">
 													</div></p>
 												</div>
@@ -435,11 +436,11 @@
 											<div class="modal-body">
 												<h3>WeChat Banking </h3>
 												<div class="row">
-													<div class="col-md-6">
-														<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium, ut unde. Quae sed, incidunt laudantium nesciunt, optio corporis quod earum pariatur omnis illo saepe numquam suscipit, nemo placeat dignissimos eius mollitia et quas officia doloremque ipsum labore rem deserunt vero! Magnam totam delectus accusantium voluptas et, tempora quos atque, fugiat, obcaecati voluptatibus commodi illo voluptates dolore nemo quo soluta quis.</p>
-														<p>Molestiae sed enim laboriosam atque delectus voluptates rerum nostrum sapiente obcaecati molestias quasi optio exercitationem, voluptate quis consequatur libero incidunt, in, quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nobis officiis, autem earum tenetur quidem. Quae non dicta earum. Ipsum autem eaque cum dolor placeat corporis quisquam dolorum at nesciunt.</p>
+													<div class="col-md-6" style=" width:30%;">
+														<p>In local retail banking market, the digital innovation has been the hottest word in the past 20 years. With the soaring up of intelligent phone, ‘banking in your hand’ (mobile banking) has taken quite a proportion of the market share from ‘banking on your fingertips’ (internet banking on PC). And the emerging of WeChat banking has even pushed the line forward, -- banks are able to reach out further to their customers and to stick more closely to their daily life.</p>
+														<p>Most of local foreign banks have launched their WeChat banking with fairly good market feedback. To firm our market position, especially in retail market with the launch of credit card, we need to build up WeChat Banking as one of our digital pillars.</p>
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC 微信银行解决方案2.jpg" alt="">
 													</div>
 												</div>
@@ -458,15 +459,15 @@
 												<h4 class="modal-title" id="project-12-label">HSBC业务线人脸识别能力解决方案</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3></h3>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="col-md-6" style=" width:30%;">
 														<p>应用场景：</p>
 														<p>HSBC员工之间要组织一个活动，但是由于员工数量众多，大多数员工之间并不认识，希望能够促进员工间的交流。</p>
                             <p>解决方案：</p>
 														<p>设计开发了遇见APP产品，员工只要安装在手机端且注册后。在员工活动时，对于不认识的人，只要需要用摄像头扫一扫，即可识别对方信息（包括姓名、爱好等等），方便员工之间相互了解交流。</p>
 													</div>
-													<div class="col-md-6">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 														<img src="./images/HSBC业务线人脸识别能力解决方案2.jpg" alt="">
 													</div>
 												</div>
