--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -212,7 +212,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item ">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/三八节.jpg" alt="">
+										<img src="images/sanba.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-2">
 											<i class="fa fa-search-plus"></i>
 											<span>女王节快乐</span>
@@ -252,7 +252,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item web-design">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/英语角1.jpg" alt="">
+										<img src="images/e1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-3">
 											<i class="fa fa-search-plus"></i>
 											<span>English Corner</span>
@@ -317,7 +317,7 @@
 														<p>Agile development is a number of industry experts for some of the current status of the enterprise to make the software development team to work quickly, respond to changes in the values and principles, and in early 2001, the establishment of the agile alliance. They are revealing better software development practices through hands-on practice and helping others.Simply put, agile development is a human centered, iterative, incremental development approach to embrace the changing development process.</p>
 													</div>
 													<div class="col-md-6">
-														<img src="images/敏捷培训2.jpg" alt="">
+														<img src="images=agile2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -333,7 +333,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item web-design">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/网银1.jpg" alt="">
+										<img src="images/w1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-5">
 											<i class="fa fa-search-plus"></i>
 											<span>Internet Banking Training</span>
@@ -357,7 +357,7 @@
 													    <p>为了提高每个部门的英语水平，我们设立了有针对性的课程，包括书面和口头部分。您可以在我们的专业国际化解决方案中选择适合自己的课程，学习和享受私人定制英语课程。</p>
 													</div>
 													<div class="col-md-6">
-														<img src="images/网银2.jpg" alt="">
+														<img src="images/w2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -453,7 +453,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item web-design">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/英语培训2.jpg" alt="">
+										<img src="images/e2.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-8">
 											<i class="fa fa-search-plus"></i>
 											<span>English Orientation</span>
@@ -477,7 +477,7 @@
 													    <p>每周四的新员工培训是一项基本且必要的英语培训活动，活动旨在提高自我介绍和邮件写作能力。此外，还有很多日常工作沟通的办公室英语小贴士提供给大家。</p>
 													</div>
 													<div class="col-md-6">
-														<img src="images/新员工培训.jpg" alt="">
+														<img src="images/new.jpg" alt="">
 													</div>
 												</div>
 											</div>
