--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -158,7 +158,7 @@
 														<p>Current presence in HSBC</p>
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/西安ODC方案1.jpg" alt="">
+														<img src="./images/ODC1.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -183,7 +183,7 @@
 														<p></p>
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC业务线服务目录总览2.jpg" alt="">
+														<img src="./images/fuwumulu2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -211,7 +211,7 @@
 														<p>	交付模式创新,2015年11月，通过对项目的敏捷交付能力的认证，以过去年两中我们在数据为基础。我们和汇丰在一些成熟度较高的项目上签署了故事点交付的新交付合同。在我们和汇丰的合作形式上又向前迈出了重要的一步。</p>
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC业务线敏捷开发能力2.jpg" alt="">
+														<img src="./images/minjie2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -243,7 +243,7 @@
 														<p>技能鉴定体系-个性定制学习训练实战</p>	
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC业务线能力中心建设方案3.jpg" alt="">
+														<img src="./images/jianshe3.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -270,7 +270,7 @@
 														<p>Operational monitoring & Control System </p>	
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC业务线云能力解决方案2.jpg" alt="">
+														<img src="./images/yunnengli2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -298,7 +298,7 @@
 														<p>5. 我们的能力 </p>														
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC业务线数据迁移能力解决方案2.jpg" alt="">
+														<img src="./images/shujuqianyi2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -325,7 +325,7 @@
 														<p>4.Find yourself: As internationalization grows, candidates will get the corresponding promotion once they matched JD in occupation path.</p>	
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC业务线英语培训能力解决方案2.jpg" alt="">
+														<img src="./images/english-p2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -358,7 +358,7 @@
 														<p>8）更多能力……</p>		
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC业务线元数据&数据质量治理能力解决方案1.jpg" alt="">
+														<img src="./images/yuanshuju1.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -387,7 +387,7 @@
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
 
-														<img src="./images/PCF解决方案2.jpg" alt="">
+														<img src="./images/PCF2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -416,7 +416,7 @@
 														<p>Various devices  models will be provided all the time</p>
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC设备云测解决方案2.jpg" alt="">
+														<img src="./images/yunshebei2.jpg" alt="">
 													</div></p>
 												</div>
 											</div>
@@ -441,7 +441,7 @@
 														<p>Most of local foreign banks have launched their WeChat banking with fairly good market feedback. To firm our market position, especially in retail market with the launch of credit card, we need to build up WeChat Banking as one of our digital pillars.</p>
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC 微信银行解决方案2.jpg" alt="">
+														<img src="./images/wechat-bk2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -468,7 +468,7 @@
 														<p>设计开发了遇见APP产品，员工只要安装在手机端且注册后。在员工活动时，对于不认识的人，只要需要用摄像头扫一扫，即可识别对方信息（包括姓名、爱好等等），方便员工之间相互了解交流。</p>
 													</div>
 													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
-														<img src="./images/HSBC业务线人脸识别能力解决方案2.jpg" alt="">
+														<img src="./images/renlianshibie2.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -532,7 +532,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item SOLUTION" style="position: absolute; left: 0px; top: 0px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/西安ODC方案.jpg" alt="">
+										<img src="./images/ODC.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-1">
 											<i class="fa fa-search-plus"></i>
 											<span>SOLUTION</span>
@@ -548,7 +548,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION" style="position: absolute; left: 292px; top: 0px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC业务线服务目录总览1.jpg" alt="">
+										<img src="./images/fuwumulu1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-2">
 											<i class="fa fa-search-plus"></i>
 											<span>INTERNATIONALIZATION </span>
@@ -564,7 +564,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item SOLUTION" style="position: absolute; left: 585px; top: 0px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC业务线敏捷开发能力1.jpg" alt="">
+										<img src="./images/minjie1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-3">
 											<i class="fa fa-search-plus"></i>
 											<span>SOLUTION</span>
@@ -580,7 +580,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item SOLUTION" style="position: absolute; left: 877px; top: 0px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC业务线能力中心建设方案.jpg" alt="">
+										<img src="./images/jianshe.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-4">
 											<i class="fa fa-search-plus"></i>
 											<span>SOLUTION</span>
@@ -596,7 +596,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item DEVICE_CLOUD" style="position: absolute; left: 292px; top: 208px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC业务线云能力解决方案1.jpg" alt="">
+										<img src="./images/yunnengli1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-5">
 											<i class="fa fa-search-plus"></i>
 											<span>DEVICE_CLOUD</span>
@@ -612,7 +612,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item SOLUTION" style="position: absolute; left: 877px; top: 233px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC业务线数据迁移能力解决方案1.jpg" alt="">
+										<img src="./images/shujuqianyi1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-6">
 											<i class="fa fa-search-plus"></i>
 											<span>SOLUTION</span>
@@ -628,7 +628,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION" style="position: absolute; left: 0px; top: 325px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC业务线英语培训能力解决方案1.jpg" alt="">
+										<img src="./images/english-p1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-7">
 											<i class="fa fa-search-plus"></i>
 											<span>INTERNATIONALIZATION</span>
@@ -644,7 +644,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item SOLUTION" style="position: absolute; left: 585px; top: 325px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC业务线元数据&数据质量治理能力解决方案2.jpg" alt="">
+										<img src="./images/yuanshuju2.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-8">
 											<i class="fa fa-search-plus"></i>
 											<span>SOLUTION</span>
@@ -660,7 +660,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item SOLUTION" style="position: absolute; left: 292px; top: 416px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/PCF解决方案1.jpg" alt="">
+										<img src="./images/PCF1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-9">
 											<i class="fa fa-search-plus"></i>
 											<span>SOLUTION</span>
@@ -676,7 +676,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item DEVICE_CLOUD" style="position: absolute; left: 877px; top: 466px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC设备云测解决方案1.jpg" alt="">
+										<img src="./images/yunshebei1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-10">
 											<i class="fa fa-search-plus"></i>
 											<span>DEVICE_CLOUD</span>
@@ -692,7 +692,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item SOLUTION" style="position: absolute; left: 585px; top: 557px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC 微信银行解决方案1.jpg" alt="">
+										<img src="./images/wechat-bk1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-11">
 											<i class="fa fa-search-plus"></i>
 											<span>SOLUTION</span>
@@ -708,7 +708,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item SOLUTION" style="position: absolute; left: 0px; top: 558px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./images/HSBC业务线人脸识别能力解决方案1.jpg" alt="">
+										<img src="./images/renlianshibie1.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-12">
 											<i class="fa fa-search-plus"></i>
 											<span>SOLUTION</span>
