--- a/src/main/webapp/service3.html
+++ b/src/main/webapp/service3.html
@@ -310,7 +310,7 @@
 												<div class="row">
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;专业的Scrum教练、敏捷开发教练为您提供实效敏捷开发实施辅导，协助您打造团队，提升组织敏捷性，产品开发敏捷性。</p>
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;和团队一起工作是我们最主要的工作方式，我们可以通过多种不同的工作方法评估团队和组织的情况；我们作为团队教练贴身辅导团队、训练关键人员，帮助团队找到最适合他们的流程和实践；我们作为咨询顾问为管理者提供解决棘手问题的最佳解决方案</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;和团队一起工作是我们最主要的工作方式，我们可以通过多种不同的工作方法评估团队和组织的情况；我们作为团队教练贴身辅导团队、训练关键人员，帮助团队找到最适合他们的流程和实践；我们作为咨询顾问为管理者提供解决棘手问题的最佳解决方案。</p>
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的敏捷Coach服务：敏捷服务目录--管理咨询--咨询分类--敏捷Coach</p>
 													</div>
 													<div class="col-md-6">
@@ -350,9 +350,9 @@
 												<h3>敏捷进阶</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;认为Scrum很简单，Scrum实施起来形似而神不似
-															认为Scrum和敏捷只是流程和技术的问题，而忽略了团队协作和团队能力的提升
-															旨在项目层面实施Scrum，缺乏管理层的关注与支持，忽略了组织结构的调整和优化
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;认为Scrum很简单，Scrum实施起来形似而神不似，
+															认为Scrum和敏捷只是流程和技术的问题，而忽略了团队协作和团队能力的提升，
+															旨在项目层面实施Scrum，缺乏管理层的关注与支持，忽略了组织结构的调整和优化，
 															旨在开发团队实施Scrum，没有让需求或业务方参与，缺乏客户协作。</p>
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;我们提供敏捷的进阶知识：敏捷服务目录--敏捷管理--敏捷分层</p>
 													</div>
@@ -393,7 +393,7 @@
 												<h3>TDD</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;TDD是测试驱动开发（Test-Driven Development）的英文简称，是敏捷开发中的一项核心实践和技术，也是一种设计方法论。TDD的原理是在开发功能代码之前，先编写单元测试用例代码，测试代码确定需要编写什么产品代码</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;TDD是测试驱动开发（Test-Driven Development）的英文简称，是敏捷开发中的一项核心实践和技术，也是一种设计方法论。TDD的原理是在开发功能代码之前，先编写单元测试用例代码，测试代码确定需要编写什么产品代码。</p>
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的TDD服务：敏捷服务目录--Devops全栈工具--工具赋能--TDD</p>
 													</div>
 													<div class="col-md-6">
@@ -433,9 +433,9 @@
 												<h3>BDD</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;行为驱动开发（Behaviour-Driven-Development)简写BDD
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;行为驱动开发（Behaviour-Driven-Development)简写BDD，
 															BDD是TDD的一种演化，作为一种设计方法，可以有效的改善设计，并在系统演化过程中为团队指明前进方向</p>
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;行为驱动开发的根基是一种“通用语言”。这种通用语言同时被客户和开发者用来定义系统的行为。由于客户和开发者使用同一种语言来描述同一个系统， 可以最大程度避免表达不一致带来的问题.</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;行为驱动开发的根基是一种“通用语言”。这种通用语言同时被客户和开发者用来定义系统的行为。由于客户和开发者使用同一种语言来描述同一个系统， 可以最大程度避免表达不一致带来的问题。</p>
 														<p>在如下渠道你可以获得专业BDD服务：敏捷服务目录--Devops全栈工具--工具赋能--BDD</p>
 													</div>
 													<div class="col-md-6">
@@ -635,7 +635,7 @@
 
 																			</tr>
 																			<tr>
-																				<td>Scrum 开发流程</td>
+																				<td>Scrum开发流程</td>
 
 																			</tr>
 																			<tr>
@@ -643,7 +643,7 @@
 
 																			</tr>
 																			<tr>
-																				<td>Scrum 结构框架</td>
+																				<td>Scrum结构框架</td>
 
 																			</tr>
 																			<tr>
@@ -674,11 +674,11 @@
 																				<td>迭代的回顾</td>
 																			</tr>
 																			<tr>
-																				<td>产品 backlog</td>
+																				<td>产品 Backlog</td>
 
 																			</tr>
 																			<tr>
-																				<td>管理迭代的 backlog</td>
+																				<td>管理迭代的 Backlog</td>
 
 																			</tr>
 																			<tr>
