--- a/src/main/webapp/service8.html
+++ b/src/main/webapp/service8.html
@@ -143,7 +143,7 @@
 </div>
 <!-- banner end -->
 
-<div class="section" id="trainingService">
+<div class="section" id="trainingService" style="padding:0px">
     <div class="container">
 
        <div class="row"  >
@@ -587,7 +587,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only"></span></button>
                 <h4 class="modal-title" id="project-1-label">English Training Service Category</h4>
             </div>
             <div class="modal-body">
@@ -769,7 +769,7 @@
                 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+
             </div>
         </div>
     </div>
@@ -791,10 +791,10 @@
                                 <!--<div class="panel-heading" role="tab" id="trainingHeading1">-->
                                     <!--<h4 class="panel-title">-->
                         <div class="col-md-8" col-md-offset-2="">
-                             <img src="./images/服务勾选规范.png" alt="">
+                             <img src="./images/service.png" alt="">
                         </div>
                         <div class="col-md-8" col-md-offset-2="">
-                             <img src="./images/培训规范.png" alt="">
+                             <img src="./images/tr.png" alt="">
                         </div>
                       <!---->
 
@@ -806,7 +806,6 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -826,12 +825,12 @@
                         <p>需求描述:为更好的服务客户，提高组织的综合实力和竞争力，某交付部提出要强化初级员工英语读写能力和中高级员工口语表达能力的国际化赋能需求，其中读写部分报名30人，赋能方向为商务邮件写作和日常职场书面表达；口语部分报名20人，赋能方向为项目会议处理、跨文化交际学习、公共演讲、和商务接待等。以下是该交付部的国际化赋能方案设计：</p>
                     </div>
                     <div class="col-md-6">
-                        <img src="images/赋能计划.png" alt="">
+                        <img src="images/pl.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+
         </div>
     </div>
 </div>
