修改错别字

--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -261,7 +261,7 @@
 													<div class="col-md-6">
 														<p>当有交付部需要场内尚未有的技术能力时，能力中心可以有几种方式进行此新能力导入:<br/><br/>
 														1. 联系外部资源：在进行相应的评估之后，能力中心可以联系外部的培训资源对特定人员进行新能力培训。<br/><br/>
-														2. 内部人员进行学习：在评估过后不适合邀请外部资源的情况下，能力中心会组织人员进行预言学习, 然后讲能力
+														2. 内部人员进行学习：在评估过后不适合邀请外部资源的情况下，能力中心会组织人员进行预研学习, 然后讲能力
 															赋予到项目组中.<br/>
 														</p>
 														<p>当前能力中心已经为全场进行了多项新能力导入，包括：mulesoft, angularJs等</p>
