--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -140,7 +140,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<h1 class="text-center">We are <span>Capability Center</span></h1>
-							<p class="lead">愿景解读：员工通过知识库体系获得自己想要的知识，然后通过组织提供的培训和训战体系将知识转化为技能，再通过任职体系将技能转化为能力和职位，从而获得尊重让自己生活更美好。 </p>
+
 						</div>
 					</div>
 				</div>
@@ -482,7 +482,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h1 class="text-center">SpiderNet 能力孵化系统</h1>
-						<h2 class="text-center">即将上线，敬请期待！</h2>
+						<h2 class="text-center"></h2>
 					</div>
 				</div>
 			</div>
