修改错别字

--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -160,7 +160,7 @@
 										<div class="col-sm-6 col-md-3 isotope-item web-design" style="position: absolute; left: 0px; top: 0px;">
 											<div class="image-box">
 												<div class="overlay-container">
-													<img src="./业务服务_files/RBWM.jpg" alt="">
+													<img src="business/RBWM.jpg" alt="">
 													<a class="overlay" data-toggle="modal" data-target="#project-1">
 														<i class="fa fa-search-plus"></i>
 													</a>
@@ -175,7 +175,7 @@
 										<div class="col-sm-6 col-md-3 isotope-item app-development" style="position: absolute; left: 292px; top: 0px;">
 											<div class="image-box">
 												<div class="overlay-container">
-													<img src="./业务服务_files/CMB.jpg" alt="">
+													<img src="business/CMB.jpg" alt="">
 													<a class="overlay" data-toggle="modal" data-target="#project-2">
 														<i class="fa fa-search-plus"></i>
 													</a>
@@ -190,7 +190,7 @@
 										<div class="col-sm-6 col-md-3 isotope-item web-design" style="position: absolute; left: 585px; top: 0px;">
 											<div class="image-box">
 												<div class="overlay-container">
-													<img src="./业务服务_files/GPB.jpg" alt="">
+													<img src="business/GPB.jpg" alt="">
 													<a class="overlay" data-toggle="modal" data-target="#project-3">
 														<i class="fa fa-search-plus"></i>
 													</a>
@@ -205,7 +205,7 @@
 										<div class="col-sm-6 col-md-3 isotope-item site-building" style="position: absolute; left: 877px; top: 0px;">
 											<div class="image-box">
 												<div class="overlay-container">
-													<img src="./业务服务_files/GBM.jpg" alt="">
+													<img src="business/GBM.jpg" alt="">
 													<a class="overlay" data-toggle="modal" data-target="#project-4">
 														<i class="fa fa-search-plus"></i>
 													</a>
@@ -246,15 +246,15 @@
 								<p>中间业务：个人汇兑结算、个人信托、个人租赁、个人保管箱、个人票据托收、代理支付、个人咨询及理财业务、个人外汇买卖及外币兑换业务等 </p>
 							</div>
 							<div class="col-md-6">
-								<img src="./业务服务_files/Mortgage.jpg" alt="">
+								<img src="business/Mortgage.jpg" alt="">
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
-								<img src="./业务服务_files/wechatBanking.jpg" width="400" height="300" alt="">
+								<img src="business/wechatBanking.jpg" width="400" height="300" alt="">
 							</div>
 							<div class="col-md-6">
-								<img src="./业务服务_files/VTM.jpg" width="400" height="300" alt="">
+								<img src="business/VTM.jpg" width="400" height="300" alt="">
 							</div>
 						</div>
 					</div>
@@ -279,7 +279,7 @@
 								<p></p>
 							</div>
 							<div class="col-md-4">
-								<img src="./业务服务_files/CMB.jpg" alt="">
+								<img src="business/CMB.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -303,7 +303,7 @@
 								<p>私人银行（PrivateBanking），是银行服务的一种，专门面向富有阶层，为富豪们提供个人财产投资与管理，一般需要拥有至少100万美元以上的流动资产才可在较大型的国际金融公司或银行中申请开设此类服务。私人银行服务最主要的是资产管理，规划投资，根据客户需要提供特殊服务，也可通过设立离岸公司、家族信托基金等方式为顾客节省税务和金融交易成本。该种服务的年均利润率可达到15%，远高于其他金融服务</p>
 							</div>
 							<div class="col-md-4">
-								<img src="./业务服务_files/GPB.jpg" alt="">
+								<img src="business/GPB.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -328,7 +328,7 @@
 
 							</div>
 							<div class="col-md-4">
-								<img src="./业务服务_files/GBM.jpg">
+								<img src="business/GBM.jpg">
 							</div>
 						</div>
 					</div>
