--- a/src/main/webapp/业务服务.html
+++ b/src/main/webapp/业务服务.html
@@ -75,13 +75,13 @@
 														<p>中间业务：个人汇兑结算、个人信托、个人租赁、个人保管箱、个人票据托收、代理支付、个人咨询及理财业务、个人外汇买卖及外币兑换业务等 </p>
 													</div>
 													<div class="col-md-6-1">
-														<img src="./业务服务_files/Mortgage.jpg" alt="">
+														<img src="business/Mortgage.jpg" alt="">
 													</div>
 																										<div class="col-md-6-1">
-														<img src="./业务服务_files/wechatBanking.jpg" alt="">
+														<img src="business/wechatBanking.jpg" alt="">
 													</div>
 																										<div class="col-md-6-1">
-														<img src="./业务服务_files/VTM.jpg" alt="">
+														<img src="business/VTM.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -106,7 +106,7 @@
 														<p></p>
 													</div>
 													<div class="col-md-6-2">
-														<img src="./业务服务_files/CMB.jpg" alt="">
+														<img src="business/CMB.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -130,7 +130,7 @@
 														<p>私人银行（PrivateBanking），是银行服务的一种，专门面向富有阶层，为富豪们提供个人财产投资与管理，一般需要拥有至少100万美元以上的流动资产才可在较大型的国际金融公司或银行中申请开设此类服务。私人银行服务最主要的是资产管理，规划投资，根据客户需要提供特殊服务，也可通过设立离岸公司、家族信托基金等方式为顾客节省税务和金融交易成本。该种服务的年均利润率可达到15%，远高于其他金融服务</p>
 													</div>
 													<div class="col-md-6-2">
-														<img src="./业务服务_files/GPB.jpg" alt="">
+														<img src="business/GPB.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -154,7 +154,7 @@
 														<p>投资银行( investment banking,corporate finance）是主要从事证券发行、承销、交易、企业重组、兼并与收购、投资分析、风险投资、项目融资等业务的非银行金融机构，是资本市场上的主要金融中介。是最典型的投资性金融机构，一般认为，投资银行是在资本市场上为企业发行债券、股票，筹集长期资金提供中介服务的金融机构，主要从事证券承销、公司购并与资产重组、公司理财、基金管理等业务。其基本特征是综合经营资本市场业务。证券投资的分析方法主要有如下三种：基本分析、技术分析、演化分析，其中基本分析主要应用于投资标的物的选择上，技术分析和演化分析则主要应用于具体投资操作的时间和空间判断上，作为提高投资分析有效性和可靠性的重要补充。</p>
 													</div>
 													<div class="col-md-6-2">
-														<img src="./业务服务_files/GBM.jpg" alt="">
+														<img src="business/GBM.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -187,7 +187,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item web-design" style="position: absolute; left: 0px; top: 0px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./业务服务_files/RBWM.jpg" alt="">
+										<img src="business/RBWM.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-1">
 											<i class="fa fa-search-plus"></i>
 										</a>
@@ -202,7 +202,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item app-development" style="position: absolute; left: 292px; top: 0px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./业务服务_files/CMB.jpg" alt="">
+										<img src="business/CMB.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-2">
 											<i class="fa fa-search-plus"></i>
 										</a>
@@ -217,7 +217,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item web-design" style="position: absolute; left: 585px; top: 0px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./业务服务_files/GPB.jpg" alt="">
+										<img src="business/GPB.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-3">
 											<i class="fa fa-search-plus"></i>
 										</a>
@@ -232,7 +232,7 @@
 							<div class="col-sm-6 col-md-3 isotope-item site-building" style="position: absolute; left: 877px; top: 0px;">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="./业务服务_files/GBM.jpg" alt="">
+										<img src="business/GBM.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-4">
 											<i class="fa fa-search-plus"></i>
 										</a>
