--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -203,7 +203,7 @@
 								<div class="space"></div>
 							</div>
 				</div>
-							<div class="col-md-12">
+							<div class="col-md-12" style="color:#000000">
 
 														<p>第一，刚开始我们不知道有什么，所以我们先要解决我们有什么的问题，先完成基础业务能力和技术能力的沉淀形成知识库；</p>
 														<p>第二，有了基本业务和基本技术的知识库我们才能提供基本培训和训战体系；</p>
