修改创新管理

--- a/src/main/webapp/service5.html
+++ b/src/main/webapp/service5.html
@@ -101,7 +101,7 @@
 												<li><a href="service3.html">敏捷</a></li>
 												<li><a href="service4.html">架构</a></li>
 												<li class="active"><a href="service5.html">创新</a></li>
-												<li><a href="service6.html">管理</a></li>
+												<li><a href="">管理</a></li>
 												<li><a href="service7.html">售前</a></li>
 												<li><a href="service8.html">国际化</a></li>
 											</ul>
