--- a/src/main/webapp/service6.html
+++ b/src/main/webapp/service6.html
@@ -100,7 +100,7 @@
 												<li><a href="service2.html">业务</a></li>
 												<li><a href="service3.html">敏捷</a></li>
 												<li><a href="service4.html">架构</a></li>
-												<li><a href="service5.html">创新</a></li>
+												<li><a href="">创新</a></li>
 												<li class="active"><a href="service6.html">管理</a></li>
 												<li><a href="service7.html">售前</a></li>
 												<li><a href="service8.html">国际化</a></li>
