--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -100,8 +100,8 @@
 												<li><a href="service2.html">业务</a></li>
 												<li><a href="service3.html">敏捷</a></li>
 												<li><a href="service4.html">架构</a></li>
-												<li><a href="service5.html">创新</a></li>
-												<li><a href="service6.html">管理</a></li>
+												<li><a href="">创新</a></li>
+												<li><a href="">管理</a></li>
 												<li class="active"><a href="service7.html">售前</a></li>
 												<li><a href="service8.html">国际化</a></li>
 											</ul>
@@ -157,7 +157,8 @@
 														<p>ChinaSoft Overview</p>
 														<p>Current presence in HSBC</p>
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/ODC1.jpg" alt="">
 													</div>
 												</div>
@@ -182,7 +183,8 @@
 														<p>overview去介绍HSBC业务线所覆盖的银行业务</p>
 														<p></p>
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/fuwumulu2.jpg" alt="">
 													</div>
 												</div>
@@ -210,7 +212,8 @@
 														<p>	已经逐渐从T&M的交付形式转向由中软Leader带领团队的Team Delivery交付形式。</p>
 														<p>	交付模式创新,2015年11月，通过对项目的敏捷交付能力的认证，以过去年两中我们在数据为基础。我们和汇丰在一些成熟度较高的项目上签署了故事点交付的新交付合同。在我们和汇丰的合作形式上又向前迈出了重要的一步。</p>
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/minjie2.jpg" alt="">
 													</div>
 												</div>
@@ -242,7 +245,8 @@
 														<p>技能鉴定体系-个性定制学习训练实战</p>	
 														<p>技能鉴定体系-个性定制学习训练实战</p>	
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/jianshe3.jpg" alt="">
 													</div>
 												</div>
@@ -269,7 +273,8 @@
 														<p>Integrated risk monitoring solution</p>
 														<p>Operational monitoring & Control System </p>	
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/yunnengli2.jpg" alt="">
 													</div>
 												</div>
@@ -297,7 +302,8 @@
 														<p>4. 基于CDC产品的数据迁移及案例</p>		
 														<p>5. 我们的能力 </p>														
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/shujuqianyi2.jpg" alt="">
 													</div>
 												</div>
@@ -324,7 +330,8 @@
 														<p>3.Keep on going:Candidates continue to adding value. </p>
 														<p>4.Find yourself: As internationalization grows, candidates will get the corresponding promotion once they matched JD in occupation path.</p>	
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/english-p2.jpg" alt="">
 													</div>
 												</div>
@@ -357,7 +364,8 @@
 														<p>7）基于故障原因分析的数据治理能力</p>
 														<p>8）更多能力……</p>		
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/yuanshuju1.jpg" alt="">
 													</div>
 												</div>
@@ -385,7 +393,8 @@
 														<p>4. Fast Deployment</p>
 						              	<p>5. Centralized Management</p>
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 
 														<img src="./images/PCF2.jpg" alt="">
 													</div>
@@ -440,7 +449,8 @@
 														<p>In local retail banking market, the digital innovation has been the hottest word in the past 20 years. With the soaring up of intelligent phone, ‘banking in your hand’ (mobile banking) has taken quite a proportion of the market share from ‘banking on your fingertips’ (internet banking on PC). And the emerging of WeChat banking has even pushed the line forward, -- banks are able to reach out further to their customers and to stick more closely to their daily life.</p>
 														<p>Most of local foreign banks have launched their WeChat banking with fairly good market feedback. To firm our market position, especially in retail market with the launch of credit card, we need to build up WeChat Banking as one of our digital pillars.</p>
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/wechat-bk2.jpg" alt="">
 													</div>
 												</div>
@@ -467,7 +477,8 @@
                             <p>解决方案：</p>
 														<p>设计开发了遇见APP产品，员工只要安装在手机端且注册后。在员工活动时，对于不认识的人，只要需要用摄像头扫一扫，即可识别对方信息（包括姓名、爱好等等），方便员工之间相互了解交流。</p>
 													</div>
-													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px">
+													<div class="col-md-6-1" style="width:65%;float:right;margin-right:10px
+">
 														<img src="./images/renlianshibie2.jpg" alt="">
 													</div>
 												</div>
