--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -174,7 +174,7 @@
 													<td><a><span>贷款</span></a></td>
 													<td><a><span>外汇</span></a></td>
 													<td><a><span>保险</span></a></td>
-													<td><a href="http://117.78.38.89/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5"><span>房贷</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5"><span>房贷</span></a></td>
 												</tr>
 												<tr>
 													<td><a><span>基金</span></a></td>
