--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -317,7 +317,7 @@
 														<p>Agile development is a number of industry experts for some of the current status of the enterprise to make the software development team to work quickly, respond to changes in the values and principles, and in early 2001, the establishment of the agile alliance. They are revealing better software development practices through hands-on practice and helping others.Simply put, agile development is a human centered, iterative, incremental development approach to embrace the changing development process.</p>
 													</div>
 													<div class="col-md-6">
-														<img src="images=agile2.jpg" alt="">
+														<img src="images/agile2.jpg" alt="">
 													</div>
 												</div>
 											</div>
